--- a/assets/sass/abstracts/_varibles.scss
+++ b/assets/sass/abstracts/_varibles.scss
@@ -1,2 +1,18 @@
-//font-family: 'Jost', sans-serif;
-//font-family: 'Roboto', sans-serif;
+//Colores
+$white: #fff;
+$blue-light: #8bcdf3;
+$smoky-black: #0c0910;
+$granite-gray: #646266;
+$rojo-suave: #db4646;
+//Tipografía
+$jost: 'Jost', sans-serif;
+$roboto: 'Roboto', sans-serif;
+//tamaños fuentes
+$xxx-large: 50;
+$xx-large: 30;
+$x-large: 20;
+$large: 18;
+$medium: 16;
+$small: 14;
+$x-small: 12;
+
