--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -1,8 +1,11 @@
 .principal {
-    width: 100%;
-    height: 15rem;
+  width: 100%;
+  height: 18rem;
+
   &__image {
-      width: 100%;
-      height: 100%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
   }
 }
