--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -16,6 +16,7 @@
 @import 'layout/form';
 @import 'layout/header';
 @import 'layout/main-section';
+@import 'layout/nav';
 
 //components
 @import 'components/buttons';
